# lipidomics_tutorial_cajalcourse_students

./: .gitignore  README.md  environment-umaia.yml  environment.yml  pyproject.toml  requirements-extra.txt
docs/: SETUP.md
notebooks/00_intro/: 00_tooling.ipynb  02_concepts.ipynb
notebooks/level1/: 01_mass_spectra_and_data_student.ipynb  02_annotation_student.ipynb  03_normalization_umaia_student.ipynb
notebooks/level2/: 04_anatomy_allen_student.ipynb  05_embedding_student.ipynb  06_clustering_transfer_student.ipynb
notebooks/level3/: 07_clustering_scratch_and_differential_student.ipynb  08_multimodal_xgb_shap_go_student.ipynb  09_your_own_analysis_student.ipynb
scripts/: build_umaia_input.py  fetch_data_bundle.py  fetch_references.py  run_umaia.py
solutions/: README.md
solutions/00_intro/: 01_python_for_data.ipynb
solutions/level1/: 01_mass_spectra_and_data_solution.ipynb  02_annotation_solution.ipynb  03_normalization_umaia_solution.ipynb
solutions/level2/: 04_anatomy_allen_solution.ipynb
solutions/level3/: 07_clustering_scratch_and_differential_solution.ipynb  08_multimodal_xgb_shap_go_solution.ipynb  09_your_own_analysis_solution.ipynb
src/cajal_lipidomics/: __init__.py  analysis.py  annotation.py  data.py  embedding.py  ml.py  multimodal.py  plotting.py  style.py
